--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,14 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "components": ["components"],
+      "containers": ["containers"],
+      "utils": ["utils"],
+      "ui": ["components/ui"],
+      "lib": ["lib"],
+      "hooks": ["hooks"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
