--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@fontsource-variable/manrope": "^5.2.6",
     "@fontsource-variable/plus-jakarta-sans": "^5.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.81.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
